--- a/_config.yml
+++ b/_config.yml
@@ -23,9 +23,9 @@ title: Dianne Velasco
 
 # List of links in the navigation bar
 navbar-links:
-  About: "aboutme"
-  Research: "research"
-  Publications: "publications"
+##  About: "aboutme"
+##  Research: "research"
+##  Publications: "publications"
   Contact: "contact"
 #  Resources:
 #    - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
