--- a/_config.yml
+++ b/_config.yml
@@ -92,7 +92,7 @@ social-network-links:
 #  twitch: yourname
 #  yelp: yourname
 #  scholar: 
-#  orcid: 
+#  orcid: 0000-0003-1432-0630
 #  researchgate: 
 
 # Select which share links to show in posts
