--- a/_data/SocialNetworks.yml
+++ b/_data/SocialNetworks.yml
@@ -90,3 +90,15 @@ yelp:
   name: "Yelp"
   baseURL: "https://{{ site.author.yelp }}.yelp.com"
   icon: "fa-yelp"
+
+scholar:
+  name: "Google Scholar"
+  baseURL: "https://scholar.google.com/"
+  icon: "fa-googlescholar"
+
+orcid:
+  name: "ORCiD"
+  baseURL: "https://orcid.org/"
+  icon: "fa-orcid"
+  
+researchgate:
