--- a/_config.yml
+++ b/_config.yml
@@ -91,8 +91,8 @@ social-network-links:
 #  steam: deanat78
 #  twitch: yourname
 #  yelp: yourname
-#  scholar: 
-#  orcid: 0000-0003-1432-0630
+  scholar: citations?hl=en&user=h2_YtiYAAAAJ
+  orcid: 0000-0003-1432-0630
 #  researchgate: 
 
 # Select which share links to show in posts
