--- a/_config.yml
+++ b/_config.yml
@@ -93,7 +93,7 @@ social-network-links:
 #  yelp: yourname
   scholar: citations?hl=en&user=h2_YtiYAAAAJ
   orcid: 0000-0003-1432-0630
-#  researchgate: 
+  researchgate: Dianne_Velasco
 
 # Select which share links to show in posts
 share-links-active:
