--- a/_data/SocialNetworks.yml
+++ b/_data/SocialNetworks.yml
@@ -104,4 +104,4 @@ orcid:
 researchgate:
   name: "ResearchGate"
   baseURL: "https://www.researchgate.net/profile/"
-  icon: "researchgate"
+  icon: "fa-researchgate"
