--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,7 @@ navbar-links:
 ##  About: "aboutme"
 ##  Research: "research"
   Publications: "publications"
+  Outreach: "outreach"
   Contact: "contact"
 #  Resources:
 #    - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
