--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,7 @@ navbar-links:
 ##  Research: "research"
   Publications: "publications"
   Outreach: "outreach"
+  Blog: "blog.html"
   Contact: "contact"
 #  Resources:
 #    - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
