--- a/_config.yml
+++ b/_config.yml
@@ -23,12 +23,12 @@ title: Dianne Velasco
 
 # List of links in the navigation bar
 navbar-links:
-##  About: "aboutme"
-##  Research: "research"
-  Publications: "publications"
-  Outreach: "outreach"
-  Blog: "blog.html"
-  Contact: "contact"
+##  About: "pages/aboutme"
+##  Research: "pages/research"
+  Publications: "pages/publications"
+  Outreach: "pages/outreach"
+  Blog: "pages/index.html"
+  Contact: "pages/contact"
 #  Resources:
 #    - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
 #    - Learn markdown: "http://www.markdowntutorial.com/"
