--- a/_config.yml
+++ b/_config.yml
@@ -170,6 +170,7 @@ markdown: kramdown
 highlighter: rouge
 permalink: /:year-:month-:day-:title/
 paginate: 5
+paginate_path: "/pages/page:num/"
 
 kramdown:
   input: GFM
